scoreboard/kube-deployment/rootthebox.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rootthebox-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: "http,https"
spec:
  tls:
  - hosts:
    - juiceshop-scoreboard.lskysd.ca
  rules:
  - host: juiceshop-scoreboard.lskysd.ca
    http:
      paths:
      - backend:
          serviceName: rootthebox
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rootthebox
  labels:
    app: rootthebox
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 25%
       maxSurge: 1
  selector:
    matchLabels:
      app: rootthebox
  template:
    metadata:
      labels:
        app: rootthebox
    spec:
      containers:
        - name: frontend
          image: rootthebox:latest
          imagePullPolicy: Never # get the one built on the kubernetes server itself
          ports:
            - containerPort: 8888
        - name: memcached
          image: memcached:latest
          ports:
            - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: rootthebox
  labels:
    app: rootthebox
spec:
  selector:
    app: rootthebox
  ports:
   - name: http
     port: 80
     targetPort: 8888
     protocol: TCP
